--- a/index.html
+++ b/index.html
@@ -4,16 +4,51 @@
   <meta charset="UTF-8">
   <title>Shopping List</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <style>
+    .container {
+        width: 40%;
+        margin: 20px auto 0px auto;
+    }
+
+    .removed {
+        color: gray;
+    }
+
+    .removed label {
+        text-decoration: line-through;
+    }
+
+    ul li {
+        list-style-type: none;
+    }
+
+    .footer {
+        font-size: 0.7em;
+        margin-top: 20vh;
+    }
+    </style>
 </head>
 <body>
 <div id="app" class="container">
     <h2>{{ title }}</h2>
     <ul>
-        <li>{{ items[0] }}</li>
-        <li>{{ items[1[ }}</li>
+        <li v-for="item in items" v-bind:class="{ 'removed': item.checked }">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" v-model="item.checked"> {{ item.text }}
+                </label>
+            </div>
+        </li>
+        <!-- <li>{{ items[0] }}</li>
+        <li>{{ items[1] }}</li> -->
     </ul>
+    <div class="footer">
+        <hr />
+        <em>Change the title of your shopping list here</em>
+        <input v-model="title" />
+    </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
