added compnents for add item, item list, and change title

--- a/index.html
+++ b/index.html
@@ -3,58 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Shopping List</title>
+  <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <style>
     .container {
-        width: 40%;
-        margin: 20px auto 0px auto;
-    }
-
-    .removed {
-        color: gray;
+      width: 40%;
+      margin: 20px auto 0px auto;
     }
 
     .removed label {
-        text-decoration: line-through;
+      text-decoration: line-through;
     }
 
     ul li {
-        list-style-type: none;
+      list-style-type: none;
+    }
+
+    ul li span {
+      margin-left: 5px;
     }
 
     .footer {
-        font-size: 0.7em;
-        margin-top: 20vh;
+      font-size: 0.7em;
+      margin-top: 20vh;
     }
-    </style>
+  </style>
 </head>
 <body>
 <div id="app" class="container">
-    <h2>{{ title }}</h2>
-    <div class="input-group">
-        <input v-model="newItem" v-on:keyup.enter="addItem" placeholder="add shopping list item" type="text" class="form-control">
-        <span class="input-group-btn">
-            <button v-on:click="addItem" class="btn btn-default" type="button">Add!</button>
-        </span>
-    </div>
-    <ul>
-        <li v-for="item in items" v-bind:class="{ 'removed': item.checked }">
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" v-model="item.checked"> {{ item.text }}
-                </label>
-            </div>
-        </li>
-        <!-- <li>{{ items[0] }}</li>
-        <li>{{ items[1] }}</li> -->
-    </ul>
-    <div class="footer">
-        <hr />
-        <em>Change the title of your shopping list here</em>
-        <input v-model="title" />
-    </div>
+  <h2>{{ title }}</h2>
+  <add-item-component></add-item-component>
+  <items-component></items-component>
+  <div class="footer">
+    <hr/>
+    <em>Change the title of your shopping list here</em>
+    <change-title-component></change-title-component>
+  </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
